<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ultra power saving mode</string>
	<string name="app_name2">UPSM</string>	
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
	<!-- Info LongClick --> 
    <string name="uninstall_s5_app">Uninstall App</string>
	<string name="info_s5_app">App Info</string>
	
	<!-- Info Array -->
	<string name="array_normal">Normal</string>
	<string name="array_light">Light</string>
	<string name="array_samsungs5">Samsung S5</string>
	<string name="array_red">Red</string>
	<string name="array_orange">Orange</string>
	<string name="array_fullscreen">FullScreen</string>
	
	<!-- Menu Array -->
	<string name="more_menu">More</string>
	<string name="powersaving_menu">Power Saving</string>
	<string name="launcher_settings_menu">Launcher Settings</string>
	<string name="settings_menu">Settings</string>
	
	<!-- MainActivity Text -->
	<string name="main_battery">Battery</string>
	<string name="touchwiz_help">Save power with a simple home screen and access to a limited number of apps.</string>
	
	<!-- Launcher Settings Text -->
	<string name="settings_theme">Theme</string>
	<string name="settings_theme_summary">Change the Theme</string>
	
	<string name="general_launcher_cat">Launcher General</string>
	<string name="homescreen_cat">Home Screen</string>
	<string name="about_cat">About app</string>
	
	<string name="grid_size_settings">Grid Size</string>
	<string name="grid_size_settings_dialog">Choose GridSize</string>
	<string name="grid_size_settings_summary">Change the GridSize</string>
	
	<!-- PowerSaving Settings Text -->
	<string name="general_powersaving_cat">Power saving mode settings</string>
	<string name="wifi_quick_toggle_title">Wi-Fi</string>
	<string name="wifi_quick_toggle_summary">Turn on/off Wi-Fi</string>
	<string name="bt_quick_toggle_title">Bluetooth</string>
	<string name="bt_quick_toggle_summary">Turn on/off Bluetooth</string>
	<string name="data_quick_toggle_title">Mobile Data</string>
	<string name="data_quick_toggle_summary">Turn on/off Mobile Data</string>
	<string name="brightness_quick_toggle_title">Brightness</string>	
	<string name="brightness_quick_toggle_summary">Lower Brightness and then lock/unlock device to apply</string>
</resources>